--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@ body, html {
     background-color: #121212;
     background-image: 
         linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-        url('https://www.transparenttextures.com/patterns/carbon-fibre.png');
+        url('https://www.heropatterns.com/patterns/circuit-board.svg');
+    background-size: 100px; /* Adjust size as needed */
 }
 
 .vcard {
