--- a/style.css
+++ b/style.css
@@ -8,7 +8,9 @@ body, html {
     justify-content: center;
     align-items: center;
     background-color: #121212;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='192' height='192' viewBox='0 0 192 192'%3E%3Cpath fill='%239C92AC' fill-opacity='0.4' d='M192 15v2a11 11 0 0 0-11 11c0 1.94 1.16 4.75 2.53 6.11l2.36 2.36a6.93 6.93 0 0 1 0 9.76l-2.36 2.36c-1.37 1.36-2.53 4.17-2.53 6.11a11 11 0 0 0 11 11v2a13 13 0 0 1-13-13c0-2.64-1.4-5.8-3.7-8.1l-2.3-2.3a9 9 0 0 0 0-12.6l2.3-2.3c2.3-2.3 3.7-5.46 3.7-8.1a13 13 0 0 1 13-13zm-192 0v2a11 11 0 0 1 11 11c0 1.94-1.16 4.75-2.53 6.11l-2.36 2.36a6.93 6.93 0 0 0 0 9.76l2.36 2.36c1.37 1.36 2.53 4.17 2.53 6.11a11 11 0 0 1-11 11v2a13 13 0 0 0 13-13c0-2.64 1.4-5.8 3.7-8.1l2.3-2.3a9 9 0 0 0 0-12.6l-2.3-2.3c-2.3-2.3-3.7-5.46-3.7-8.1a13 13 0 0 0-13-13zm96 0v2a11 11 0 0 0-11 11c0 1.94 1.16 4.75 2.53 6.11l2.36 2.36a6.93 6.93 0 0 1 0 9.76l-2.36 2.36c-1.37 1.36-2.53 4.17-2.53 6.11a11 11 0 0 0 11 11v2a13 13 0 0 1-13-13c0-2.64-1.4-5.8-3.7-8.1l-2.3-2.3a9 9 0 0 0 0-12.6l2.3-2.3c2.3-2.3 3.7-5.46 3.7-8.1a13 13 0 0 1 13-13zM0 95v2a11 11 0 0 0-11 11c0 1.94 1.16 4.75 2.53 6.11l2.36 2.36a6.93 6.93 0 0 1 0 9.76l-2.36 2.36c-1.37 1.36-2.53 4.17-2.53 6.11a11 11 0 0 0 11 11v2a13 13 0 0 1-13-13c0-2.64-1.4-5.8-3.7-8.1l-2.3-2.3a9 9 0 0 0 0-12.6l2.3-2.3c2.3-2.3 3.7-5.46 3.7-8.1a13 13 0 0 1 13-13zm192 0v2a11 11 0 0 1 11 11c0 1.94-1.16 4.75-2.53 6.11l-2.36 2.36a6.93 6.93 0 0 0 0 9.76l2.36 2.36c1.37 1.36 2.53 4.17 2.53 6.11a11 11 0 0 1-11 11v2a13 13 0 0 0 13-13c0-2.64 1.4-5.8 3.7-8.1l2.3-2.3a9 9 0 0 0 0-12.6l-2.3-2.3c-2.3-2.3-3.7-5.46-3.7-8.1a13 13 0 0 0-13-13zm-96 0v2a11 11 0 0 0-11 11c0 1.94 1.16 4.75 2.53 6.11l2.36 2.36a6.93 6.93 0 0 1 0 9.76l-2.36 2.36c-1.37 1.36-2.53 4.17-2.53 6.11a11 11 0 0 0 11 11v2a13 13 0 0 1-13-13c0-2.64-1.4-5.8-3.7-8.1l-2.3-2.3a9 9 0 0 0 0-12.6l2.3-2.3c2.3-2.3 3.7-5.46 3.7-8.1a13 13 0 0 1 13-13zM0 175v2a11 11 0 0 0-11 11c0 1.94 1.16 4.75 2.53 6.11l2.36 2.36a6.93 6.93 0 0 1 0 9.76l-2.36 2.36c-1.37 1.36-2.53 4.17-2.53 6.11a11 11 0 0 0 11 11v2a13 13 0 0 1-13-13c0-2.64-1.4-5.8-3.7-8.1l-2.3-2.3a9 9 0 0 0 0-12.6l2.3-2.3c2.3-2.3 3.7-5.46 3.7-8.1a13 13 0 0 1 13-13zm192 0v2a11 11 0 0 1 11 11c0 1.94-1.16 4.75-2.53 6.11l-2.36 2.36a6.93 6.93 0 0 0 0 9.76l2.36 2.36c1.37 1.36 2.53 4.17 2.53 6.11a11 11 0 0 1-11 11v2a13 13 0 0 0 13-13c0-2.64 1.4-5.8 3.7-8.1l2.3-2.3a9 9 0 0 0 0-12.6l-2.3-2.3c-2.3-2.3-3.7-5.46-3.7-8.1a13 13 0 0 0-13-13zm-96 0v2a11 11 0 0 0-11 11c0 1.94 1.16 4.75 2.53 6.11l2.36 2.36a6.93 6.93 0 0 1 0 9.76l-2.36 2.36c-1.37 1.36-2.53 4.17-2.53 6.11a11 11 0 0 0 11 11v2a13 13 0 0 1-13-13c0-2.64-1.4-5.8-3.7-8.1l-2.3-2.3a9 9 0 0 0 0-12.6l2.3-2.3c2.3-2.3 3.7-5.46 3.7-8.1a13 13 0 0 1 13-13z'%3E%3C/path%3E%3C/svg%3E");
+    background-image: 
+        linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+        url('data:image/svg+xml;utf8,<svg width=\'20\' height=\'20\' viewBox=\'0 0 20 20\' xmlns=\'http://www.w3.org/2000/svg\'><rect x=\'0\' y=\'0\' width=\'20\' height=\'20\' fill=\'#222222\'/><path d=\'M0 5L20 5L20 0L0 0Z M0 15L20 15L20 10L0 10Z\' fill=\'#333333\'/><path d=\'M5 0L5 20L0 20L0 0Z M15 0L15 20L10 20L10 0Z\' fill=\'#333333\'/><path d=\'M0 0L20 20\' stroke=\'#444444\' stroke-width=\'1\'/><path d=\'M20 0L0 20\' stroke=\'#444444\' stroke-width=\'1\'/></svg>');
     background-size: auto;
     background-position: auto;
 }
@@ -26,12 +28,19 @@ body, html {
 }
 
 .card-content h1 {
-    margin-bottom: 25px;
+    margin-bottom: 10px;
     color: #ffffff;
     font-size: 2em;
     border-bottom: 2px solid #ffc107;
     padding-bottom: 10px;
     display: inline-block;
+}
+
+.slogan {
+    font-size: 1.1em;
+    color: #cccccc;
+    margin-top: 0;
+    margin-bottom: 25px;
 }
 
 .contact {
